<resources>
    <string name="app_name">MiniGame</string>
    <string name="game_logo">game logo</string>
    <string name="photosnap">Photosnap</string>
    <string name="commencer">Commencer</string>
    <string name="scores">Scores</string>
    <string name="filtrer">Filtrer</string>
    <string name="filter_time_hint">temps maximum</string>
    <string name="all_scores">Tout</string>
    <string name="dates">Dates :</string>
    <string name="temps_maximum">Temps maximum :</string>
</resources>