<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_surface"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/game_logo" />

    <TextView
        android:id="@+id/textViewTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewLogo"
        android:layout_centerHorizontal="true"
        android:text="@string/photosnap"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonCommencer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/commencer"
        android:onClick="startGame" />

    <Button
        android:id="@+id/buttonScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonCommencer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="showScores"
        android:text="@string/scores" />

</RelativeLayout>