<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ScoreActivity">

    <TextView
        android:id="@+id/score_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Scores"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/filter_container"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/filter_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/scroll_view"
        app:layout_constraintTop_toBottomOf="@id/score_title">

        <TextView
            android:id="@+id/dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:clickable="true"
            android:text="@string/dates"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/selected_dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"

            android:text="@string/all_scores"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/score_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:clickable="true"
            android:text="@string/temps_maximum"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/filter_time_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filter_time_hint"
            android:inputType="number" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_container">

        <LinearLayout
            android:id="@+id/scores_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/empty_tall_divider"
            android:gravity="center"
            android:orientation="vertical"
            android:showDividers="middle">

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
